# trip_mate

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260414_0001_init_core_tables.py  20260414_0002_add_tickets_and_ratings.py  20260415_0003_friendships_and_group_invite.py
app/: main.py  models.py
app/api/: router.py
app/api/v1/endpoints/: __init__.py  admin.py  auth.py  discovery.py  dna.py  friends.py  groups.py  match.py  orders.py  payments.py  ratings.py  tickets.py  users.py  verification.py  votes.py
app/core/: config.py  database.py  deps.py  security.py
app/schemas/: auth.py  friends.py  groups.py  orders.py  users.py  verification.py  votes.py
deploy/: README_DEPLOY.md
docs/: alembic-migration-plan.md  api-curl-selftest.md  api-friends-invite.md  api-full-spec.md  current_0414.md  deploy0414.md  frontend-flow-friend-invite.md  openapi-mvp.yaml
scripts/: deploy_ubuntu.sh
