[tool.poetry]
name = "trip-mate-backend"
version = "0.1.0"
description = "TripMate MVP backend service"
authors = ["zhouli"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.0"
python-jose = "^3.3.0"
redis = "^5.1.1"
celery = "^5.4.0"
pymysql = "^1.1.1"
cryptography = "^45.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
